# pocket-manager

./: .gitignore  README.md  config.json.example  pyproject.toml  setup.py
pocketmanager/: __init__.py  app.py  cli.py  const.py  database.py  http.py  interface.py
